--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-image: url(img/R\ \(3\).jpg);
+      background-image: url(/R\ \(3\).jpg);
     }
 
     header {
@@ -73,13 +73,13 @@
 
   <main>
     <div class="blog-post">
-      <img src="img/blog 2.jpg" alt="Imagen del Blog 1">
+      <img src="blog 2.jpg" alt="Imagen del Blog 1">
       <h2>Blog</h2>
       <p>¡Bienvenido a mi blog personal! Espero que la informacion que estes recibiendo sobre mi se interesante para ti</p>
     </div>
 
     <div class="blog-post">
-      <img src="img/blog 1.jpg" alt="Imagen del Blog 2">
+      <img src="blog 1.jpg" alt="Imagen del Blog 2">
       <h2>Blog</h2>
       <p>En este blog como les venia dicendo soy una futura ingeniera en software
         me gusta programar y aprender mas sobre mi dia a dia, soy demasiado sociable 
