--- a/contactos.html
+++ b/contactos.html
@@ -9,12 +9,12 @@
 <body>
     <div>
         <a href="#" class="logo">
-            <img src="img/logo.jpg" alt="">
+            <img src="logo.jpg" alt="">
         </a>
     </div>
     <div class="contactos">
         <div class="imagen">
-        <img src="img/facebook (3).svg" alt="">
+        <img src="facebook (3).svg" alt="">
         </div>
     </div>
     <div class="parrafo ">
@@ -26,7 +26,7 @@
 
     <div class="contactos">
         <div class="imagens">
-        <img src="img/square-instagram (1).svg" alt="">
+        <img src="square-instagram (1).svg" alt="">
         </div>
     </div>
     <div class="parrafos ">
@@ -38,7 +38,7 @@
 
     <div class="contactos">
         <div class="imagenss">
-        <img src="img/whatsapp.svg" alt="">
+        <img src="whatsapp.svg" alt="">
         </div>
     </div>
     <div class="parrafos ">
