--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header class="header-landing">
             <a class="logo" width="500px">
                 
-                <img class="logo" src="img/logo.jpg"  width="50" height="50" >
+                <img class="logo" src="logo.jpg"  width="50" height="50" >
             </a>
             <div class="wrap-servicios-section">
                 <a href="index.html" class="item-servicios-section">
@@ -43,7 +43,7 @@
                 
             </div>
         </div>
-        <img src="img/quien soy.jpg" alt="50" width="300" height="300">
+        <img src="quien soy.jpg" alt="50" width="300" height="300">
     </section> 
     <p class="c opy">&copy; Copyright 2023</p>
     <p class="copy">
