--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <header class="header-landing">
             <a class="logo" width="500px">
                 
-                <img class="logo" src="img/logo.jpg"  width="50" height="50" >
+                <img class="logo" src="logo.jpg"  width="50" height="50" >
             <div class="wrap-servicios-section">
                 <a href="index.html" class="item-servicios-section">
                     <p>Inicio</p>
@@ -44,7 +44,7 @@
         </p>
     </div>
     <section class="proyectos">
-       <h3><img src="img/c++.jpg" alt=""></h3>
+       <h3><img src="c++.jpg" alt=""></h3>
         <h3 class="titulo del proyecto"> Matrices C++</h3>
        </div> 
     </section>
@@ -59,7 +59,7 @@
     </div>
     <div>
         <section class="proyectos">
-            <h3><img src="img/landing page 4.jpg" alt=""></h3>
+            <h3><img src="landing page 4.jpg" alt=""></h3>
              <h3 class="titulo del proyecto"> Landing Page</h3>
             </div> 
          </section>
@@ -72,7 +72,7 @@
         </div>
         <div>
             <section class="proyectos">
-                <h3><img src="img/blog personal 1.jpg" alt=""></h3>
+                <h3><img src="blog personal 1.jpg" alt=""></h3>
                  <h3 class="titulo del proyecto"> Blog Personal</h3>
                 </div> 
              </section>
