--- a/sobremi.html
+++ b/sobremi.html
@@ -11,7 +11,7 @@
         <header class="header-landing">
             <a class="logo" width="500px">
                 
-                <img class="logo" src="img/logo.jpg"  width="50" height="50" >
+                <img class="logo" src="logo.jpg"  width="50" height="50" >
             <div class="wrap-servicios-section">
                 <a href="index.html" class="item-servicios-section">
                     <p>Inicio</p>
@@ -47,7 +47,7 @@
             </div>
             
         </div>
-        <img class="imagen" src="img/quien soy.jpg" alt="">
+        <img class="imagen" src="quien soy.jpg" alt="">
     </div>    
     <div>
        <p class="c opy">&copy; Copyright 2023</p>
